# passwordmanager_rust

./: .gitignore  Cargo.toml  MIGRATION.md  README.en.md  README.md  README.ru.md  USAGE.md  USAGE.ru.md  rust-port-prompt.md
.github/workflows/: ci.yml
docs/: audit-2026-04-followup.md  audit-2026-04.md
src/: crypto.rs  db.rs  generator.rs  lib.rs  main.rs  manager.rs
src/cli/: commands.rs  interactive.rs  mod.rs
tests/: auto_lock.rs  cross_compat_python.rs  e2e_cli.rs  manager_tests.rs
