[package]
name = "passwordmanagerrs"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["Denys Zahorovskyi"]
description = "Cross-compatible Rust port of the Python CLI password manager."
license = "MIT OR Apache-2.0"
repository = "https://github.com/zagordenis1/passwordmanager_rust"
readme = "README.md"
keywords = ["cli", "password-manager", "fernet", "argon2", "sqlite"]
categories = ["command-line-utilities", "cryptography"]

[lib]
name = "passwordmanagerrs"
path = "src/lib.rs"

[[bin]]
name = "pwm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
argon2 = "0.5"
fernet = "0.2"
# Force `openssl-sys` (transitive via `fernet`) to build OpenSSL from source
# rather than rely on a system install. Keeps the build working out-of-the-box
# on Windows runners where libssl is not available, without changing what
# `fernet` does on Linux/macOS where the system OpenSSL is preferred.
openssl = { version = "0.10", features = ["vendored"] }
# `pbkdf2` is used in legacy-KDF mode only. We need only the low-level
# `pbkdf2_hmac` function — no `password-hash` PHC string support — so
# we disable default features and keep only the `hmac` feature that
# gates `pbkdf2_hmac`. The crate's `simple` feature (and its
# `password-hash` dep, which pulls in `password-hash` + `subtle` +
# `base64ct`) is unused here.
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
sha2 = "0.10"
rpassword = "7"
zeroize = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "1"
rand = "0.8"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
